# usesend-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pip-audit-ignore  .pre-commit-config.yaml  .repomixignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fastmcp.json  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
docs/: fastmcp-reading-guide.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions-as-adrs.md  0002-fastmcp-3-provider-model-with-composition-root.md  0003-curated-tools-over-openapi-generation.md  README.md
src/usesend_mcp/: __init__.py  __main__.py  cli.py  errors.py  formatting.py  logging.py  server.py  settings.py
src/usesend_mcp/client/: __init__.py  usesend_client.py
src/usesend_mcp/components/: __init__.py  analytics.py  campaigns.py  contact_books.py  contacts.py  domains.py  emails.py
src/usesend_mcp/models/: __init__.py  contacts.py  emails.py
tests/: __init__.py  conftest.py  test_cli.py  test_contract.py  test_errors.py  test_formatting.py  test_lifespan.py  test_logging.py  test_server.py  test_settings.py
tests/__snapshots__/: test_contract.ambr
tests/client/: __init__.py  test_usesend_client.py
tests/components/: __init__.py  test_analytics.py  test_campaigns.py  test_contact_books.py  test_contacts.py  test_domains.py  test_emails.py
